# rajini-lock

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
launchd/: com.rajinilock.unlocker.plist
scripts/: install.sh  recovery.md  render_animation.py  render_demo.py  uninstall.sh
sivaji_unlocker/: __init__.py  __main__.py  audio.py  cli.py  config.py  enroll.py  ui.py
